--- a/sequencer-app/package.json
+++ b/sequencer-app/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "tone": "^15.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
